--- a/Operarius/package.json
+++ b/Operarius/package.json
@@ -26,10 +26,12 @@
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "loadsh": "0.0.4",
     "ng2-table": "^1.3.2",
     "rxjs": "~6.3.3",
+    "socket.io": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
