--- a/Operarius/package.json
+++ b/Operarius/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.2.2",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -19,6 +20,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@nebular/theme": "^3.5.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "all": "0.0.0",
     "angular-datatables": "^7.0.0",
@@ -29,10 +31,10 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "loadsh": "0.0.4",
+    "nebular-icons": "^1.1.0",
     "ng2-table": "^1.3.2",
-    "rxjs": "~6.3.3",
-    "socket.io": "^2.2.0",
     "rxjs": "~6.5.2",
+    "socket.io": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -41,6 +43,7 @@
     "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@schematics/angular": "~7.2.0",
     "@types/datatables.net": "^1.10.17",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
