--- a/Operarius/package.json
+++ b/Operarius/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@nebular/auth": "^3.5.0",
     "@nebular/theme": "^3.5.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "all": "0.0.0",
@@ -32,6 +33,7 @@
     "jquery": "^3.4.1",
     "loadsh": "0.0.4",
     "nebular-icons": "^1.1.0",
+    "ng-chat": "^2.0.4",
     "ng2-table": "^1.3.2",
     "rxjs": "~6.5.2",
     "socket.io": "^2.2.0",
@@ -42,6 +44,7 @@
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "~7.2.0",
+    "@angular/http": "^7.2.13",
     "@angular/language-service": "~7.2.0",
     "@schematics/angular": "~7.2.0",
     "@types/datatables.net": "^1.10.17",
