--- a/Operarius/package.json
+++ b/Operarius/package.json
@@ -11,10 +11,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.15",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
@@ -27,12 +28,13 @@
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "express": "^4.17.1",
+    "firebase": "^6.1.1",
     "jquery": "^3.4.1",
     "loadsh": "0.0.4",
     "ng2-table": "^1.3.2",
-    "rxjs": "~6.3.3",
-    "socket.io": "^2.2.0",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "~6.5.2",
+    "socket.io": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
