--- a/Operarius/package.json
+++ b/Operarius/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "all": "0.0.0",
     "angular-datatables": "^7.0.0",
+    "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
