--- a/Operarius/.gitignore
+++ b/Operarius/.gitignore
@@ -10,8 +10,8 @@
 # dependencies
 
 
-node_modules/*
-.idea
+/node_modules
+
 
 # profiling files
 chrome-profiler-events.json
@@ -43,7 +43,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
-node_modules/*
+/node_modules
 .idea
 
 # System Files
