--- a/Operarius/.gitignore
+++ b/Operarius/.gitignore
@@ -10,8 +10,7 @@
 # dependencies
 
 node_modules/*
-.idea/
-
+/node_modules
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
