--- a/Operarius/package.json
+++ b/Operarius/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "all": "0.0.0",
+    "angular-chat-awesome": "^1.0.3",
     "angular-datatables": "^7.0.0",
+    "angular-ng-autocomplete": "^1.1.13",
     "angularfire2": "^5.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
@@ -32,7 +34,11 @@
     "firebase": "^6.1.1",
     "jquery": "^3.4.1",
     "loadsh": "0.0.4",
+    "moment-timezone": "^0.5.25",
     "ng2-table": "^1.3.2",
+    "ngx-chat-ui": "0.0.7",
+    "ngx-dropzone-wrapper": "^8.0.0",
+    "ngx-quill": "^5.2.0",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.5.2",
     "socket.io": "^2.2.0",
